feat: introduce TerminalStatus for improved CLI session management and status display